Replaced concatination with StringBuilder (in OutlookAppController); added comments; refactored code

--- a/webapp/src/main/webapp/WEB-INF/views/index.html
+++ b/webapp/src/main/webapp/WEB-INF/views/index.html
@@ -29,36 +29,30 @@
     // base name
     eXo.env.portal.context = [[${baseName}]];
     eXo.env.app.context = eXo.env.portal.context;
-    console.log("context: " + eXo.env.portal.context);
 
     // portal rest
     eXo.env.portal.rest = [[${currentRestContextName}]];
-    console.log("rest: " + eXo.env.portal.rest);
 
     // language
     eXo.env.portal.language = [[${language}]];
-    console.log("language: " + eXo.env.portal.language);
 
     // getting a language of the user
-    const lang = eXo && eXo.env && eXo.env.portal && eXo.env.portal.language || 'en';
-    console.log("lang: " + lang);
+    const lang = eXo && eXo.env && eXo.env.portal && eXo.env.portal.language || "en";
 
     // outlook
-    eXo.env.app.outlook = `${eXo.env.app.context}/` + [[${outlook}]];
+    eXo.env.app.outlook = [[${outlook}]];
 
     // outlook spring
-    eXo.env.app.spring = `${eXo.env.app.outlook}/` + [[${spring}]];
-    console.log("spring: " + eXo.env.app.spring);
+    eXo.env.app.spring = [[${spring}]];
 
     /*
     // example of getting  Outlook Resource Bundle url (use GET request in order to get JSON resource)
-    const resourceBundleName = 'locale.outlook.Outlook';
-    const url = `${eXo.env.portal.context}/${eXo.env.portal.rest}/i18n/bundle/${resourceBundleName}-${lang}.json`;
+    const resourceBundleName = "locale.outlook.Outlook";
+    const url = eXo.env.portal.rest + "/i18n/bundle/" + resourceBundleName + "-" + lang + ".json";
     console.log("url: " + url);
     */
 
-    eXo.env.app.rest.resourcesBundle = `${eXo.env.portal.context}/${eXo.env.portal.rest}/i18n/bundle`;
-    console.log("resourcesBundle: " + eXo.env.app.rest.resourcesBundle);
+    eXo.env.app.rest.resourcesBundle = eXo.env.portal.rest + "/i18n/bundle";
   </script>
 </head>
 <body>
