Added React div (id = 'outlook-app') in index.html; cleaned examples from index.js (executed cleanup)

--- a/webapp/src/main/webapp/WEB-INF/views/index.html
+++ b/webapp/src/main/webapp/WEB-INF/views/index.html
@@ -58,6 +58,9 @@
 <body>
 <div id="outlook-pane">
 
+  <div id="outlook-app">
+  </div>
+
   <div id="outlook-brand-bar" class="ms-bgColor-themePrimary ms-borderColor-themePrimary">
     <ul class="brandBar ms-font-m">
       <li class="brand">
