--- a/webapp/src/main/webapp/WEB-INF/views/index.html
+++ b/webapp/src/main/webapp/WEB-INF/views/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>Index</title>
 
-        <!-- Office JavaScript API -->
+        <!-- Office JavaScript API (TODO should we make it AMD?) -->
         <script src="https://appsforoffice.microsoft.com/lib/1/hosted/Office.js"></script>
         <link
             rel="stylesheet"
