--- a/webapp/src/main/webapp/WEB-INF/views/index.html
+++ b/webapp/src/main/webapp/WEB-INF/views/index.html
@@ -10,6 +10,7 @@
             rel="stylesheet"
             href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/9.6.1/css/fabric.min.css"
         />
+        <link type="text/css" rel="stylesheet" href="/portal/skins/6.0.0-M21/eXoSkin/skin/css/Core-min-lt.css" />
 
         <script th:inline="javascript">
             eXo = {};
