--- a/webapp/src/main/webapp/react-app/index.less
+++ b/webapp/src/main/webapp/react-app/index.less
@@ -29,6 +29,13 @@ body {
 .ms-TextField-description {
   color: #767676;
   font-size: 11px;
+  font-family: 'Segoe UI Regular WestEuropean', 'Segoe UI', Tahoma, Arial, sans-serif;
+  font-weight: normal;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-shadow: none;
+  margin-bottom: 8px;
 }
 
 .ms-Button {
