--- a/webapp/src/main/webapp/react-app/index.less
+++ b/webapp/src/main/webapp/react-app/index.less
@@ -1,6 +1,5 @@
 body {
-  margin: 0 20px;
-  margin-bottom: 60px;
+  margin: 30px 20px 40px;
 }
 
 .outlook-title {
@@ -14,6 +13,7 @@ body {
   padding-top: 8px;
   font-family: 'Segoe UI Semilight WestEuropean', 'Segoe UI Semilight', 'Segoe UI', Tahoma, Arial, sans-serif;
   font-size: 12px;
+  font-weight: 350;
 }
 
 .ms-Label {
@@ -40,5 +40,23 @@ body {
 }
 
 .ms-Button {
-  margin: 10px 0;
+  border-radius: 0;
+
+  &--default {
+    margin-left: 10px;
+    border: none;
+    background-color: #f4f4f4;
+  }
+}
+
+.labelIcon {
+  padding: 0;
+  margin: 0;
+  height: fit-content;
+  width: fit-content;
+
+  &:hover {
+    background: #fff;
+    color: #004578;
+  }
 }
