added sources and styles to attach document, removed unneccesary comments convert message, fixed dropdowns height

--- a/webapp/src/main/webapp/react-app/containers/AttachDocument/index.less
+++ b/webapp/src/main/webapp/react-app/containers/AttachDocument/index.less
@@ -7,3 +7,16 @@
     right: 0;
   }
 }
+
+.tabsContainer {
+  margin: 8px 0;
+}
+
+.documentSelector {
+  max-height: 175px;
+  border-width: 1px;
+  border-style: solid;
+  min-height: 125px;
+  border-top-style: none;
+  overflow-y: auto;
+}
