fixed label with icons, added default select

--- a/webapp/src/main/webapp/react-app/index.less
+++ b/webapp/src/main/webapp/react-app/index.less
@@ -49,6 +49,10 @@ body {
     border: none;
     background-color: #f4f4f4;
   }
+
+  &--icon {
+    min-width: fit-content;
+  }
 }
 
 .labelIcon {
