--- a/webapp/src/main/webapp/WEB-INF/views/index.html
+++ b/webapp/src/main/webapp/WEB-INF/views/index.html
@@ -45,16 +45,11 @@
             //eXo.env.app.rest.activity = [[${restActivityURL}]];
             //eXo.env.app.rest.document = [[${restDocumentURL}]];
             //eXo.env.app.rest.mail = [[${restMailURL}]];
-
-            /*// TODO cleanup after applying this in the app scripts
-            // example of getting  Outlook Resource Bundle url (use GET request in order to get JSON resource)
+						
+            // TODO should it be moved into the app code?
             const resourceBundleName = "locale.outlook.Outlook";
-            // getting a language of the user TODO
-            //const lang = (eXo && eXo.env && eXo.env.portal && eXo.env.portal.language) || "en";
-            const url = eXo.env.portal.rest + "/i18n/bundle/" + resourceBundleName + "-" + lang + ".json";
-            console.log("url: " + url);
-            */
-            eXo.env.app.rest.resourcesBundle = eXo.env.portal.rest + '/i18n/bundle';
+            const lang = (eXo && eXo.env && eXo.env.portal && eXo.env.portal.language) || "en";
+            eXo.env.app.rest.resourcesBundle = eXo.env.portal.rest + "/i18n/bundle/" + resourceBundleName + "-" + lang + ".json";
         </script>
     </head>
     <body>
