TODO for using AMD for initial page bundle script

--- a/webapp/src/main/webapp/WEB-INF/views/index.html
+++ b/webapp/src/main/webapp/WEB-INF/views/index.html
@@ -54,6 +54,7 @@
     </head>
     <body>
         <div id="outlook-app"></div>
+        <!-- /* Apply AMD or like that to load and invoke the bundle as module - see webpack for packaging settings */ -->
         <script src="/outlook/js/outlook.bundle.js"></script>
     </body>
 </html>
